--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,6 @@ jobs:
 
   dynamic_application_security_testing:
     name: DAST - OWASP ZAP Testing
-    # needs: [build_and_deploy]
     runs-on: ubuntu-latest
     permissions: read-all
     steps:
@@ -59,22 +58,31 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 🔍 Run OWASP ZAP Full Scan (safe output)
+      - name: 🔍 Run OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: ${{secrets.SERVER_API}} # Replace with your target URL
-          cmd_options: '-x report.xml' # Generate XML report
-          issue_title: '' # Disable issue creation by setting empty title
-          fail_action: false # Prevent workflow failure if issues can't be created
-          allow_issue_writing: false # Disable issue writing
+          target: ${{ secrets.SERVER_API }}
+          cmd_options: '-x /tmp/report.xml'
+          issue_title: ''
+          fail_action: false
+          allow_issue_writing: false
 
-      - name: Upload XML Report
+      - name: 📁 Copy ZAP Report to Workspace
+        run: |
+          if [ -f /tmp/report.xml ]; then
+            cp /tmp/report.xml ./zap-report.xml
+          else
+            echo "❌ ZAP report not found at /tmp/report.xml"
+            exit 1
+          fi
+
+      - name: 💾 Upload XML Report
         uses: actions/upload-artifact@v4
         with:
-          name: zap-xml # Consistent artifact name for DefectDojo job
-          path: /zap/wrk/zap-report.xml # Match the filename specified in cmd_options
+          name: zap-xml
+          path: zap-report.xml
 
   upload_results:
     name: Upload Results to DefectDojo
