--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
   dynamic_application_security_testing:
     name: DAST - OWASP ZAP Testing
     runs-on: ubuntu-latest
-    permissions: read-all
+    permissions: write-all
     steps:
       - name: 📥 Checkout Code for Testing
         uses: actions/checkout@v2
@@ -64,25 +64,16 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: ${{ secrets.SERVER_API }}
-          cmd_options: '-x /tmp/report.xml'
+          cmd_options: '-x report.xml'
           issue_title: ''
           fail_action: false
           allow_issue_writing: false
-
-      - name: 📁 Copy ZAP Report to Workspace
-        run: |
-          if [ -f /tmp/report.xml ]; then
-            cp /tmp/report.xml ./zap-report.xml
-          else
-            echo "❌ ZAP report not found at /tmp/report.xml"
-            exit 1
-          fi
 
       - name: 💾 Upload XML Report
         uses: actions/upload-artifact@v4
         with:
           name: zap-xml
-          path: zap-report.xml
+          path: report.xml
 
   upload_results:
     name: Upload Results to DefectDojo
