--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,43 +9,43 @@ env:
   GITHUB_TOKEN: ''
   
 jobs:
-#   build_and_deploy:
-#     name: Build and Deploy Application
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: 📥 Checkout Code
-#         uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 0
+  build_and_deploy:
+    name: Build and Deploy Application
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-#       - name: Login to Docker Hub
-#         uses: docker/login-action@v1
-#         with:
-#           username: ${{ secrets.DOCKERHUB_USERNAME }}
-#           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
     
-#       - name: Build Docker Image
-#         run: |
-#           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/safedeploy:latest -f Dockerfile .
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/safedeploy:latest -f Dockerfile .
     
-#       - name: Push Docker Image to Docker Hub
-#         run: |
-#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/safedeploy:latest
+      - name: Push Docker Image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/safedeploy:latest
      
-#       - name: Install SSH key
-#         run: |
-#           mkdir -p ~/.ssh/
-#           cd ~/.ssh/ 
-#           touch id_rsa && touch known_hosts && chmod 600 id_rsa
-#           echo "${{ secrets.DIGITALOCEAN_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+      - name: Install SSH key
+        run: |
+          mkdir -p ~/.ssh/
+          cd ~/.ssh/ 
+          touch id_rsa && touch known_hosts && chmod 600 id_rsa
+          echo "${{ secrets.DIGITALOCEAN_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
 
-#       - name: Add Droplet to known hosts
-#         run: ssh-keyscan ${{ secrets.SERVER_IP_ADDRESS}} >> ~/.ssh/known_hosts
+      - name: Add Droplet to known hosts
+        run: ssh-keyscan ${{ secrets.SERVER_IP_ADDRESS}} >> ~/.ssh/known_hosts
 
-#       - name: Pull and run Docker images on Droplet
-#         run: |
-#           ssh ${{ secrets.SERVER_USER}}@${{ secrets.SERVER_IP_ADDRESS}} 'docker service update --force --image ${{ secrets.DOCKERHUB_USERNAME}}/safedeploy:latest services_backend'
-#           ssh ${{ secrets.SERVER_USER}}@${{ secrets.SERVER_IP_ADDRESS}} 'docker image prune -a -f'
+      - name: Pull and run Docker images on Droplet
+        run: |
+          ssh ${{ secrets.SERVER_USER}}@${{ secrets.SERVER_IP_ADDRESS}} 'docker service update --force --image ${{ secrets.DOCKERHUB_USERNAME}}/safedeploy:latest services_backend'
+          ssh ${{ secrets.SERVER_USER}}@${{ secrets.SERVER_IP_ADDRESS}} 'docker image prune -a -f'
 
 
   dynamic_application_security_testing:
